# VillagerAgent

./: .envrc  .gitignore  .gitmodules  README.md  example.py  flake.nix  justfile  proposal.md  pyproject.toml  requirements.txt  start_with_config.py  tiny_start.py
.opencode/agent/: correctness-reviewer.md  design-reviewer.md
benchmarks/: EXPERIMENT_RUNS.md  __init__.py  experiment_provenance.py
benchmarks/craft/: CLARIFICATION_POLICY_FINDINGS.md  DUAL_DAG_ABLATION_FINDINGS.md  DUAL_DAG_ABLATION_MANIFESTS.md  DUAL_DAG_SCHEMA.md  GEMMA4_12B_PROGRESS_LARGE.md  ISSUE104_SMALL_BATCH_FINDINGS.md  ISSUE114_FALLBACK_MONITORING.md  METRICS.md  README.md  TASK_DAG_MAPPING.md  V1_V4_TURN30_TRACE_FINDINGS.md  V5_ACTION_SELECTION_DIAGNOSTICS.md  V5_REPEATED_ZERO_FINDINGS.md  __init__.py  artifact_validator.py  clarification_outcomes.py  config.py  craft_env_adapter.py  craft_protocol.py  experiment.py  experiment_summary.py  fallback_monitor.py  hidden_state_keys.py  leakage_guard.py  report.py  result_converter.py  run.py  trace_compare.py  validate_comparison_configs.py
benchmarks/minecraft/: ISSUE107_SMOKE_COMPARISON.md  experiment.py  (+2 more)
doc/: dual_dag_current_model.md  minecraft_dual_dag_artifacts.md  minecraft_e2e_verification.md
env/: minecraft_client.py  minecraft_dual_dag.py  utils.py
fix-plans/: 2026-06-21.md  2026-06-23.md  2026-07-01-repeated-zero-progress-actions.md
impl-plans/: 04-dual-dag-runtime.md  README.md
model/: ollama_config.py
pipeline/: controller_tiny.py  retriever.py  utils.py
tests/: test_minecraft_dual_dag.py  test_minecraft_experiment.py
(+96 files in other folders)
