[project]
name = "villageragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "auto-gptq==0.7.1",
    "colorlog==6.8.0",
    "dashscope==1.25.18",
    "flagembedding==1.1.3",
    "flask==3.0.0",
    "google-generativeai==0.3.1",
    "gymnasium==1.1.1",
    "javascript==1!1.0.4",
    "langchain==0.0.350",
    "langchain-community==0.0.3",
    "langchain-core==0.1.1",
    "levenshtein==0.27.1",
    "matplotlib==3.8.2",
    "mistralai==0.0.12",
    "names==0.3.0",
    "numexpr==2.8.7",
    "openai==1.6.1",
    "optimum==2.1.0",
    "retry==0.9.2",
    "scikit-learn==1.3.2",
    "tiktoken==0.5.1",
    "waitress==2.1.2",
    "zhipuai==2.0.1",
]
